sanchit-login-rightsidedone

--- a/src/LOGIN/login.css
+++ b/src/LOGIN/login.css
@@ -31,5 +31,5 @@ body {
 
 .login-right {
     flex: 1;
-    background-color: #F2EFE4; /* Light beige */
+    background-color: #ffffff; /* Light beige */
 }
