--- a/src/q-ascreen/qscree.css
+++ b/src/q-ascreen/qscree.css
@@ -27,6 +27,7 @@
     margin-bottom: 40px;
     overflow: hidden;
     border-right: 3px solid;
+    white-space: nowrap;
     animation: typing 4s steps(40, end), blink-caret 0.75s step-end infinite, erasing 2s steps(40, end) 6s, retyping 4s steps(40, end) 8s;
 }
 
@@ -136,6 +137,7 @@
         letter-spacing: 1px;
         margin-bottom: 40px;
         border-right: 3px solid;
+        white-space: wrap;
         animation: none;
     }
 
