--- a/src/Home/sidebar.css
+++ b/src/Home/sidebar.css
@@ -56,8 +56,10 @@
     width: 40px; 
   }
 
-  .sidebar .logo img {
+
+  .sidebar .logo svg {
     width: 25px; 
+    height: 25px;
   }
 
   .sidebar section .item svg {
