--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -1,5 +1,5 @@
 .home {
-    background-color: #343539;
+    background-color: #212121;
     display: flex;
     margin: 0;
     padding: 0;
@@ -35,7 +35,6 @@
 }
 
 
-
 .top h1 span {
     color: white;
     font-weight: 600;
@@ -45,7 +44,8 @@
 .box {
     width: 80%;
     height: 100%;
-    background-color: #F2EFE4;
+    background-color: #212121;
+    outline: 1px solid white;
     border-radius: 20px;
     margin: 20px 0;
     display: flex;
@@ -54,7 +54,8 @@
 .input {
     display: flex;
     align-items: center;
-    background-color: #F2EFE4;
+    background-color: #2f2f2f;
+    color: white;
     border-radius: 50px;
     width: 100%;
     max-width: 600px;
@@ -70,7 +71,7 @@
 
 .input-field {
     flex-grow: 1;
-    background-color: #F2EFE4;
+    background-color: #2f2f2f;
     border: none;
     padding: 10px;
     outline: none;
@@ -79,6 +80,7 @@
 
 .mic {
     margin-left: 20px;
+    
 }
 
 @media (max-width: 600px) {
