--- a/src/SignUp/Left.css
+++ b/src/SignUp/Left.css
@@ -153,7 +153,7 @@
 
 @media (max-width: 480px) {
     .Rightpanel img {
-        width: 17%;
+        width: 35%;
         height: 10%;
     }
 
@@ -164,6 +164,7 @@
     .Rightpanel button {
         padding: 5px 13px;
         font-size: 12px;
+        margin-top: 10px;
     }
     .Rightpanel p{
         font-size: 11px;
