--- a/src/q-ascreen/qscree.css
+++ b/src/q-ascreen/qscree.css
@@ -87,12 +87,12 @@ footer p {
     background: #4f4e85;
     border: none;
     color: white;
-    margin: 10px;
+    margin: 40px;
     border-radius: 5px;
     cursor: pointer;
     font-size: 22px;
     height: 20%;
-    width: 20%;
+    width: 30%;
     text-align: center;
 }
 
@@ -106,6 +106,30 @@ footer p {
     margin: 20px 0;
     border-radius: 50px;
 }
+
+.options{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 30px;
+}
+.sometimes{
+    margin-left: 36px;
+}
+.options label span{
+    margin-left: 8px;
+    font-size: 15px;
+    font-weight: 400;
+    /* color: #4f4e85; */
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 1px;
+}
+
+
+
 
 .qbox p {
     font-size: 1rem;
@@ -155,12 +179,13 @@ footer{
     .qbox h1 {
         font-size: 18px;
         margin-bottom: 15px;
+        margin-left: 22px;
     }
 
     .qbox button {
         font-size: 18px;
         height: auto;
-        width: 100%;
+        width: 50%;
         padding: 10px 0;
     }
 
