--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -29,9 +29,8 @@
 }
 
 .top img {
-    width: 40%;
-    height: 80px;
-    
+    width: 30%;
+    height: 70px;
 }
 
 
@@ -102,6 +101,7 @@
     }
     .box {
         width: 100%;
+        height: 75%;
     }
     .input {
         max-width: 300px;
