--- a/src/intro/Intro.css
+++ b/src/intro/Intro.css
@@ -120,7 +120,7 @@ body {
     animation: jump 2s infinite ease-in-out; 
 }
 
-@keyframes jump {
+/* @keyframes jump {
     0% {
         transform: translateY(0);
     }
@@ -130,18 +130,18 @@ body {
     100% {
         transform: translateY(0);
     }
-}
+} */
 .intro-last{
     display: flex;
 }
 .feedback-form {
     padding: 20px;
-    margin-top: 20px;
+    margin-top: 0 auto;
     background-color: #101929;
     border-radius: 10px;
     width: 50%;
-    margin-left: auto;
-    margin-right: 150px;
+    /* margin-left: auto; */
+    /* margin-right: 150px; */
     text-align: left;
     color: white;
     height:600px;
